--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <nav class="navegador">
                     <ul class="nav-menu">
                         <li><a class="nav-menu-link nav-menu-link_active" href="index.html">INICIO</a></li>
-                        
+                        <li><a class="nav-menu-link nav-menu-link_active" href="#">EMPRESA</a></li>
                         <li><a class="nav-menu-link nav-menu-link_active" href="productos.html">PRODUCTOS</a></li>
                         <li><a class="nav-menu-link nav-menu-link_active" href="ofertas.html">OFERTAS</a></li>
                         <li><a class="nav-menu-link nav-menu-link_active" href="contacto.html">CONTACTO</a></li>
